review comment addressed

--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -7,6 +7,7 @@ import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 ### Horizon AI Query sleep macros (September 2025)
 
 Horizon AI Query now exposes two new Sleep Macros to help you pinpoint when users fall asleep and wake up within a session.
+Check out [Sleep Analysis](/api-reference/horizon-ai/aggregation/query-dsl/sleep-analysis) for more details.
 
 <Accordion icon="moon" iconType="duotone" title="Details" defaultOpen>
 
