--- a/docs/api-reference/horizon-ai/aggregation/query-dsl/where-clause.mdx
+++ b/docs/api-reference/horizon-ai/aggregation/query-dsl/where-clause.mdx
@@ -22,7 +22,7 @@ WHERE predicates support these operators:
 Comparison operands can reference table columns (for example, `stage_rem_second`) or Source columns (for example, `source_type`).
 
 <Note>
-Column identifiers follow the Continuous Query column names. See [Continuous Query column mappings](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#continuous-query-column-mappings) for a full list.
+Column identifiers follow the Continuous Query column names. See [Column Mappings](/api-reference/horizon-ai/aggregation/query-dsl/column-expressions#column-mappings) for a full list.
 </Note>
 
 ## Filter rows before grouping
