--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -12,8 +12,7 @@ Horizon AI Query now accepts a `where` clause so you can filter input rows befor
 
 - Compose SQL-style predicates with `>`, `>=`, `<`, `<=`, `=`, `!=`, `NOT`, `AND`, `OR`, and parenthesis grouping.
 - Filters always run before `group_by` evaluation when both clauses are present.
-- DSL helpers expose `.where("…")` so you can keep filtering logic alongside your select and aggregation expressions.
-- Read more in the [WHERE clause documentation](/api-reference/horizon-ai/aggregation/query-dsl/where-clause).
+- Check out the [WHERE clause](/api-reference/horizon-ai/aggregation/query-dsl/where-clause) documentation for more details.
 
 <CodeGroup>
 ```python Python DSL
