--- a/docs/changelog/wearables/api.mdx
+++ b/docs/changelog/wearables/api.mdx
@@ -4,6 +4,42 @@ title: "API"
 
 import HorizonAIBeta from '/snippets/horizon-ai-beta.mdx';
 
+### Horizon AI Query sleep macros (September 2025)
+
+Horizon AI Query now exposes two new Sleep Macros to help you pinpoint when users fall asleep and wake up within a session.
+Check out [Sleep Analysis](/api-reference/horizon-ai/aggregation/query-dsl/sleep-analysis) for more details.
+
+<Accordion icon="moon" iconType="duotone" title="Details" defaultOpen>
+
+- `asleep_at` returns the first instance at which the user is considered to be asleep, i.e., session start + sleep latency.
+- `awake_at` returns the time at which the user has stopped sleeping, sans any brief awakening.
+
+Use these macros in the Select clause of Horizon AI queries to surface consistent bedtime and wake-up timestamps across providers.
+
+Syntax:
+
+<CodeGroup>
+```python Python DSL
+import vitalx.aggregation as va
+
+va.select(
+    va.Sleep.asleep_at(),
+    va.Sleep.awake_at()
+)
+```
+
+```python JSON DSL
+{
+    "select": [
+        { "value_macro": "asleep_at" },
+        { "value_macro": "awake_at" }
+    ]
+}
+```
+</CodeGroup>
+
+</Accordion>
+
 ### Device metadata and source device tracking (August 2025)
 
 We have added device tracking with new API endpoints and enhanced data attribution.
