--- a/docs/lab/overview/locations.mdx
+++ b/docs/lab/overview/locations.mdx
@@ -6,7 +6,7 @@ title: "Patient Service Centers and Appointments"
 
 Verifying if a particular zip code is serviceable is an important step, as not all labs have patient service centers within a state or within a reasonable distance.
 
-The recommended high-level flow for verifying PSC availability at Vital is:
+The recommended high-level flow for verifying PSC availability at Junction is:
 
 1. Fetch PSC location data via the `GET /v3/order/area/info` endpoint, the response payload should look like this:
 
