add patient name validation requirements to order doc. add patient-name-validation snippet. add snippet to endpoint docs where validate_name is used.

--- a/docs/api-reference/lab-testing/create-order.mdx
+++ b/docs/api-reference/lab-testing/create-order.mdx
@@ -2,6 +2,10 @@
 openapi: "POST /v3/order"
 ---
 
+import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+
+<PatientNameValidation />
+
 <RequestExample>
 
 ```python Python
