--- a/docs/api-reference/lab-testing/create-unregistered-order.mdx
+++ b/docs/api-reference/lab-testing/create-unregistered-order.mdx
@@ -3,6 +3,10 @@ title: "Create Unregistered Testkit Order"
 openapi: "POST /v3/order/testkit"
 ---
 
+import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+
+<PatientNameValidation />
+
 <RequestExample>
 
 ```python Python
