--- a/docs/api-reference/user/create-insurance.mdx
+++ b/docs/api-reference/user/create-insurance.mdx
@@ -2,6 +2,10 @@
 openapi: "POST /v2/user/{user_id}/insurance"
 ---
 
+import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+
+<PatientNameValidation />
+
 <RequestExample>
 
 ```bash cURL
