--- a/docs/api-reference/user/upsert-info.mdx
+++ b/docs/api-reference/user/upsert-info.mdx
@@ -6,6 +6,10 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
+import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+
+<PatientNameValidation />
+
 <RequestExample>
 
 ```bash cURL
