--- a/docs/api-reference/lab-testing/import-order.mdx
+++ b/docs/api-reference/lab-testing/import-order.mdx
@@ -7,6 +7,10 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
+import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+
+<PatientNameValidation />
+
 <RequestExample>
 
 ```python Python
