--- a/docs/api-reference/user/upsert-info.mdx
+++ b/docs/api-reference/user/upsert-info.mdx
@@ -6,9 +6,10 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
-import PatientNameValidation from '/snippets/patient-name-validation.mdx';
+<Note>
+Patient name fields (`first_name`, `last_name`) must follow specific validation rules due to lab restrictions. See [Patient Name Validation](/lab/workflow/order-requirements#patient-name-validation) for complete details.
+</Note>
 
-<PatientNameValidation />
 
 <RequestExample>
 
