andy/cus2-11-docs-format-and-length-for-quest-appointment-id

--- a/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-booking.mdx
+++ b/docs/api-reference/lab-testing/psc-schedulling/appointment-psc-booking.mdx
@@ -113,7 +113,8 @@ fmt.Printf("Received data %s\n", response)
     "provider": "quest",
     "status": "pending",
     "provider_id": "e89eb489-7382-4966-bb14-7ab4763eba6c",
-    "can_reschedule":true
+    "can_reschedule": true,
+    "external_id": "ABCDEF"
 }
 ```
 </ResponseExample>
