[CE 152] Document patient name validation regex pattern (#400)
## Description: 

Added comprehensive documentation for the `validate_name()` function's
regex pattern used in patient name validation across Vital API
endpoints. Code
[here](https://github.com/tryVital/vital-mono/blob/27ed42ce9ae8b48a193c59200ce008f7ac6ef184/mono/vital_core/schemas/db_schemas/lab_test/patient.py#L39-L49).

The regex pattern
`^([a-zA-Z0-9]{1})([a-zA-Z0-9-.,']*(\s[a-zA-Z0-9-.,']+)*[a-zA-Z0-9-.,']?)$`
was undocumented, making it difficult for developers to understand
validation requirements and error handling when creating lab test
orders. Add a section in the Workflow > Order Requirements and a note to
each endpoint where this method would be called.

--- a/docs/api-reference/lab-testing/create-order.mdx
+++ b/docs/api-reference/lab-testing/create-order.mdx
@@ -2,6 +2,11 @@
 openapi: "POST /v3/order"
 ---
 
+<Note>
+Patient name fields (`first_name`, `last_name`) must follow specific validation rules due to lab restrictions. See [Patient Name Validation](/lab/workflow/order-requirements#patient-name-validation) for complete details.
+</Note>
+
+
 <RequestExample>
 
 ```python Python
