--- a/docs/lab/overview/quickstart.mdx
+++ b/docs/lab/overview/quickstart.mdx
@@ -213,7 +213,7 @@ You can then use the test `id` when creating an order.
 
 ### (3) Placing an order
 
-Ordering a test for your user is as simple as making an API call:
+Ordering a test for your user is as simple as making an API call. Ensure all patient name fields (`first_name`, `last_name`, `receiver_name`) follow our [name validation requirements](/lab/workflow/order-requirements#patient-name-validation):
 
 <CodeGroup>
 
