--- a/docs/api-reference/lab-testing/import-order.mdx
+++ b/docs/api-reference/lab-testing/import-order.mdx
@@ -7,6 +7,11 @@ import FeatureBeta from '/snippets/feature-beta.mdx';
 
 <FeatureBeta />
 
+<Note>
+Patient name fields (`first_name`, `last_name`) must follow specific validation rules due to lab restrictions. See [Patient Name Validation](/lab/workflow/order-requirements#patient-name-validation) for complete details.
+</Note>
+
+
 <RequestExample>
 
 ```python Python
