--- a/docs/api-reference/lab-testing/register-order.mdx
+++ b/docs/api-reference/lab-testing/register-order.mdx
@@ -3,6 +3,11 @@ title: "Register Testkit Order"
 openapi: "POST /v3/order/testkit/register"
 ---
 
+<Note>
+Patient name fields (`first_name`, `last_name`) must follow specific validation rules due to lab restrictions. See [Patient Name Validation](/lab/workflow/order-requirements#patient-name-validation) for complete details.
+</Note>
+
+
 <RequestExample>
 
 ```python Python
