--- a/docs/lab/workflow/order-requirements.mdx
+++ b/docs/lab/workflow/order-requirements.mdx
@@ -15,6 +15,37 @@ When you order a lab test through our API, you may have to collect consents from
 As mentioned [in the introduction](/lab/overview/introduction#features), you don't need to have your own Physician to place orders with Vital. When you [order a test](/lab/overview/quickstart#3-placing-an-order), you can pass an optional `physician` argument.
 If provided, the order will use your physician. If not, your order will go through with Vital's physician network. For more information, please check [our lab testing page](https://tryvital.io/labs) and [book an introductory call with us](https://cal.com/team/vital/discovery-call).
 
+### Patient Name Validation
+
+Patient names must conform to a specific regex pattern due to lab restrictions. This validation applies to all name fields including `first_name` and `last_name`.
+
+**Regex Pattern:**
+```
+^([a-zA-Z0-9]{1})([a-zA-Z0-9-.,']*(\s[a-zA-Z0-9-.,']+)*[a-zA-Z0-9-.,']?)$
+```
+
+**Validation Rules:**
+- Must start with an alphanumeric character (not space, hyphen, or punctuation)
+- Only allows letters (a-z, A-Z), numbers (0-9), hyphens (-), periods (.), commas (,), apostrophes (')
+- Spaces are only allowed between words
+- Cannot start or end with a space
+- Cannot have consecutive spaces
+
+**Valid Name Examples:**
+- `John`
+- `Mary-Jane` 
+- `O'Connor`
+- `Dr. Smith`
+- `Jean-Pierre`
+
+**Invalid Name Examples:**
+- ` John` (starts with space)
+- `John ` (ends with space)
+- `-John` (starts with hyphen)
+- `John@Smith` (contains @)
+- `José` (contains accented character)
+
+
 ### Minors
 
 Ordering for minors (under 18 years old) requires a specific configuration, which you can request with your Junction Customer Success Manager.
